fix answers component (hvala polja)

--- a/frontend/src/assets/css/QuizDetails.css
+++ b/frontend/src/assets/css/QuizDetails.css
@@ -56,4 +56,15 @@
     height: 30px;
     background-color: white;
     border: black solid 2px;
+    font-weight: bold;
+}
+
+.gBox {
+    background-color: lightgreen;
+    color: white;
+}
+
+.rBox {
+    background-color: lightcoral;
+    color: white;
 }
