--- a/frontend/src/assets/css/Answer.css
+++ b/frontend/src/assets/css/Answer.css
@@ -11,3 +11,13 @@
     margin: 2%;
     padding: 5px;
 }
+
+.rButton {
+    background-color: lightcoral;
+    color: white;
+}
+
+.gButton {
+    background-color: lightgreen;
+    color: white;
+}
