Add initial registration form

--- a/frontend/src/pages/Register/register.scss
+++ b/frontend/src/pages/Register/register.scss
@@ -1,3 +1,22 @@
-.register-container {
+@import "src/assets/scss/variables";
 
+.register-container {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.register-title {
+  font-size: 22px;
+  padding: 5.5%;
+}
+
+#registration-button {
+  background: $primary;
+  border: $primary;
+  width: 100%;
+}
+
+label {
+  width: 150px;
+  display: inline-block;
 }
