--- a/frontend/src/assets/css/QuizContainer.css
+++ b/frontend/src/assets/css/QuizContainer.css
@@ -1,40 +1,42 @@
  .div-grid {
+    margin-left: 15%;
+    margin-top: 5%;
     display: grid;
     grid-template: repeat(70, minmax(auto, 1fr)) / repeat(40, minmax(auto, 1fr));
     grid-gap: 10px;
-    padding: 10px;
-    width: 80%;
-    height: 500pt;
+    width: 75%;
+    max-height: 650pt; 
+    height: 40%;
     overflow: hidden;
 }
 
 #quiz-details {
     grid-row-start: 1;
-    grid-row-end: 70; 
+    grid-row-end: 60; 
     grid-column-start: 1;
-    grid-column-end: 7;
+    grid-column-end: 6;
     background-color: #DDE5E7;
     overflow: hidden;
 }
 
 #question {
     grid-row-start: 1;
-    grid-row-end: 25;
-    grid-column-start: 7;
+    grid-row-end: 20;
+    grid-column-start: 6;
     grid-column-end: 30; 
     background-color: green;
     background-color: #bdc3c5;   
 }
 
 #answer {
-    grid-row-start: 25;
-    grid-row-end: 70;
-    grid-column-start: 7;
+    grid-row-start: 20;
+    grid-row-end: 60;
+    grid-column-start: 6;
     grid-column-end: 30; 
     padding: 50px;
     background-color: #DDE5E7;
     min-width: 0;
     min-height: 0;
-    
+    overflow: hidden;
 }
 
