--- a/frontend/src/components/LoginMenu/loginMenu.scss
+++ b/frontend/src/components/LoginMenu/loginMenu.scss
@@ -1,3 +1,13 @@
+@import "src/assets/scss/variables";
+
 .login-menu {
   width: 250px;
+  background-color: $white;
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid $gray;
+
+  .login-menu-body {
+    margin-bottom: 10px;
+  }
 }
