--- a/frontend/src/pages/PlayQuiz/QuizMain/quizMain.scss
+++ b/frontend/src/pages/PlayQuiz/QuizMain/quizMain.scss
@@ -3,7 +3,6 @@
 .quiz-main-container {
   .created-by-container {
     font-size: 16px;
-    margin-top: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -28,5 +27,15 @@
 
   .ant-rate {
     font-size: 64px;
+  }
+
+  .quiz-time {
+    margin-top: 20px;
+    text-align: left;
+    font-size: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
   }
 }
