--- a/frontend/src/shared/Header/header.scss
+++ b/frontend/src/shared/Header/header.scss
@@ -7,6 +7,13 @@
   height: 80px;
   margin-bottom: 30px;
 
+  .search-button {
+    .ant-btn-primary {
+      background: $primary;
+      border-color: $primary;
+    }
+  }
+
   h1, h3 {
     margin-bottom: 0;
   }
