--- a/frontend/src/pages/PlayQuiz/QuizMain/quizMain.scss
+++ b/frontend/src/pages/PlayQuiz/QuizMain/quizMain.scss
@@ -38,4 +38,10 @@
     justify-content: space-between;
     margin-bottom: 10px;
   }
+
+  .update-quiz-btn {
+    width: 100%;
+    margin-top: 2%;
+    
+  } 
 }
